--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">PhoneTreeManager</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Tracking</string>
+    <string name="title_create_call">Incoming Call</string>
+    <string name="title_notifications">Urgent Calls</string>
 
     <string name="hold_on">Hold On…</string>
 
